#define GTEST_HAS_TR1_TUPLE 0
#include "gtest/gtest.h"
#include "communication/message.h"
#include "communication/message_type_enum.pb.h"

namespace OsdStartMonitoringAck_message_test
{

TEST(OsdStartMonitoringAck , explicit_constructor_check)
{
	std::string service_id = "HN0101_proxy-server_61005";


}
